# configuraptor

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: su6.yml
examples/: .env  ages.toml  cli_from_docs.py  dataclass.py  dumping.py  dumping.yml  example_dotenv.py  example_from_docs.json  example_from_docs.py  example_from_docs.toml  example_from_readme.py  example_from_readme.toml  example_mapping.py  existing_instance.py  main.py  postponed.py  readme.md  singleton.py  typedconfig_class.py
pytest_examples/: .env  config.ini  example.json5  example.toml  example.xml  example.yaml  my_config.toml  my_secrets.env  pyproject.toml  some.toml  with_dict_of_custom.toml  with_multiple_toplevel_keys.toml
src/configuraptor/: __about__.py  __init__.py  abs.py  alias.py  beautify.py  binary_config.py  cls.py  core.py  dump.py  errors.py  helpers.py  postpone.py  singleton.py  type_converters.py
src/configuraptor/loaders/: __init__.py  _types.py  loaders_310.py  loaders_311.py  loaders_shared.py  register.py
src/su6_plugin_demo/: __init__.py  cli.py
src/typedconfig/: __about__.py  __init__.py  cls.py  core.py  errors.py  main.py  singleton.py
src/typedconfig/loaders/: __init__.py  loaders_310.py  loaders_311.py
tests/: __init__.py  _test_multiple_errors.py  constants.py  test_about.py  test_alias.py  test_beautify.py  test_binary.py  test_cli.py  test_core.py  test_custom_converter.py  test_custom_filetype.py  test_default.py  test_dotenv.py  test_dumps.py  test_from_url.py  test_inifile.py  test_json_yaml.py  test_mypy.py  test_nones.py  test_path.py  test_postponed.py  test_setting_none_when_allowed.py  test_singleton.py  test_toml_basic.py  test_toml_dataclass.py  test_toml_existing.py  test_toml_typedconfig_class.py
